# archex

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
archex/: __init__.py  cli.py  compile.py  config.py  llm.py  normalize.py  ocr.py  pipeline.py  reconcile.py  util.py  validate.py
examples/: boston-1916.worklist.json  sample-output.csv
profiles/: boston-1916.yaml  pech-1911.yaml
